# consensus-mcp

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  GEMINI.md  LICENSE  README.md  dgx1_coordinator.py  dgx2_worker.py  index.html  pyproject.toml  siege-engine-gdd.md
.claude/: settings.json
.claude/agents/: tooling-defect-diagnoser.md
.claude/commands/: allclear.md  fuckup.md
.claude/hooks/: consensus_session_start.sh  dispatch-canon-validator.py  pre-write-rule-consultation.py  stop-claim-gate.py  tool-defect-gate.py  universal-action-gate.py
.consensus/: config.yaml  session-active
.consensus/schemas/: action-intent.schema.yaml  tool-defect-proof.schema.yaml
.github/workflows/: test.yml
consensus-state/: README.md
consensus-state/state/: dispatch-log.jsonl  mcp-server-audit.jsonl
consensus_mcp/: __init__.py  _anchoring_lint.py  _approve_consult.py  _architect_handoff.py  _architect_lane.py  _architect_paths.py  _atomic_io.py  _author_review_packet.py  _closure_invariant.py  _console.py  _contributor_profiles.py  _contributor_weights.py  _deliver.py  _delivery_readiness.py  _design_approval.py  _dispatch_base.py  _dispatch_builder.py  _dispatch_codex.py  _dispatch_gemini.py  _dispatch_grok.py  _dispatch_kimi.py  _dispatch_retry_policy.py  _engine_factory.py  _followup_completeness.py  _import_parent_history.py  _init_wizard.py  _iteration_paths.py  _iteration_telemetry.py  _outcome_ledger.py  _paths.py  _release_gate_check.py  _results_log.py  _results_rollup.py  _resume.py  _run_iteration_cli.py  _seal_iteration.py  _self_drive.py  _session_state.py  _smoke_test.py  _snapshot_state.py  (+13 more)
consensus_mcp/claude_extensions/: NOTICE  VENDORED.md
consensus_mcp/contributor_instructions/: base.md
consensus_mcp/contributor_profiles/: claude-swe-reviewer.yaml  claude.yaml  codex.yaml  gemini.yaml  grok.yaml  kimi.yaml
consensus_mcp/contributors/: __init__.py  _phase_mode.py  _subprocess_adapter.py  base.py  claude.py  codex.py  gemini.py  grok.py  host_peer_adapter.py  kimi.py  profile_adapter.py
consensus_mcp/dispatch_templates/: architect_ruling_template.md  architect_spec_template.md  builder_build_schema.json  builder_build_template.md  codex_proposal_schema.json  codex_proposal_template.md  codex_review_schema.json  codex_review_template.md  gemini_proposal_schema.json  gemini_proposal_template.md  gemini_review_schema.json  gemini_review_template.md  grok_proposal_schema.json  grok_proposal_template.md  grok_review_template.md  host_peer_review_template.md  kimi_review_template.md  orchestrator_role.md
consensus_mcp/docs/: README.md  state-schema.md  tool-reference.md
consensus_mcp/looper_plan/: NOTICE  VENDORED.md  __init__.py  compile.py  seed.py
consensus_mcp/schemas/: converged_plan_convention.schema.json  harness_proposal.schema.json  results-v1.schema.json
consensus_mcp/tests/: conftest.py  test_agents_init.py  test_anchoring_lint.py  test_apply_codex_patch.py  test_apply_codex_patch_f4_coverage.py  test_apply_codex_patch_hunk_anchored.py  test_apply_codex_patch_multifile.py  test_approve_consult.py  test_architect_gates.py  test_architect_handoff.py  test_architect_integration.py  test_architect_lane.py  test_architect_loop_step.py  test_architect_paths.py  test_atomic_io.py  test_author_review_packet_containment.py  test_bugfix_spec_v1302.py  test_builder_containment_smoke.py  test_capstone_full_fix_loop.py  test_closure_invariant.py  test_config.py  test_config_architect_build.py  test_consensus_get_iteration_outcome.py  test_consensus_hooks.py  test_consensus_init_command_flag_aware.py  test_consensus_run_iteration.py  test_console.py  test_contributor_profiles.py  test_contributor_scorecard_surfacing.py  test_contributor_weights.py  test_contributors.py  test_converged_plan_convention.py  test_deliver_cli.py  test_delivery_readiness.py  test_derive_pass_id.py  test_design_approval.py  test_dispatch_builder.py  test_dispatch_codex.py  test_dispatch_codex_proposal_mode.py  test_dispatch_codex_streaming.py  (+109 more)
consensus_mcp/tools/: __init__.py  _md_sections.py  _reviewer_dispatch_common.py  apply_codex_patch.py  approve_consult.py  architect_gates.py  architect_loop_step.py  audit_append_event.py  consensus_get_iteration_outcome.py  consensus_run_iteration.py  delivery_gate.py  gate_evaluate_production_with_scope_match.py  harness_propose.py  loop_run_goal.py  loop_verify_codex_patch.py  patch_apply_consensus_patch.py  patch_stage_and_dry_run.py  repo_get_section.py  repo_set_section.py  results.py  resume.py  review_read_post_seal.py  review_write_and_seal.py  reviewer_dispatch_codex.py  reviewer_dispatch_gemini.py  reviewer_dispatch_grok.py  reviewer_dispatch_kimi.py  start_consult.py  state_read_decision_ledger.py  state_update_decision_ledger.py
consensus_mcp/validators/: __init__.py  _shared.py  build_review_packet.py  consensus_gate.py  run_validator_tests.py  scope_check.py  validate_builder_dispatch.py  validate_consensus.py  validate_converged_plan.py  validate_disposition_index.py  validate_interaction_surface.py  validate_iteration.py  validate_review.py
contrib/: delivery_gate_pretooluse.py
deploy/: bootstrap-dirs.sh  dgx1-coordinator.service  dgx2-worker.service
docs/: advisories.md  code-review-2026-05-22.md  delivery-gate.md  grok-dispatch-streaming-watchdog-fix.md
docs/architecture/: autonomy-contract.md  codex-fix-author-roadmap.md  orchestration-spec.md  phase-1-completion.md  visibility-tui-design.md
docs/audits/: 2026-07-01-v2.2.1-repo-audit.md  2026-07-02-v2.2.1-regrade-audit.md
docs/consensus/: enforcement.md  field-notes-and-recommendations.md  operator-controlled-gates.md  routing-decision-table.md  tool-defect-bypass.md  vendoring.md
docs/design-consults/: init-contributor-selection-supplemental-review.md  iter-0009-add-gemini-third-reviewer.md  iter-0012-archive-import-and-snapshot.md  iter-0015-consensus-init-design-challenge.md  main-spec-scrub-stale-archive-refs.md  multi-project-resolution-v1.13.0.md  onboarding-binary-resolution-and-output-contracts.md  v1.13.0-consolidated-design.md  (+3 more)
(+973 files in other folders)
