[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consensus-mcp"
version = "1.14.1.dev0"
description = "MCP server enforcing G1-G5 consensus gates (sealed-review provenance, canonical-006 dry-run, intra-file scope, production-scope match, mediated ledger updates)"
authors = [{name = "stgarca"}]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.0",
]

[project.scripts]
consensus-mcp = "consensus_mcp.server:main"
consensus-mcp-dispatch-codex = "consensus_mcp._dispatch_codex:main"
consensus-mcp-dispatch-gemini = "consensus_mcp._dispatch_gemini:main"
consensus-init = "consensus_mcp._init_wizard:main"
# iter-0040 bonus per iter-0039 converged plan Q6: alias so `consensus init`
# (with a SPACE) also works at the shell, matching the natural mental model.
consensus = "consensus_mcp._init_wizard:main"

[tool.setuptools]
packages = [
  "consensus_mcp",
  "consensus_mcp.contributors",
  "consensus_mcp.tools",
  "consensus_mcp.validators",
]
include-package-data = true

[tool.setuptools.package-data]
consensus_mcp = [
  "dispatch_templates/*.md",
  "dispatch_templates/*.json",
  "docs/*.md",
  "spec_template.md",
  "tests/fixtures/dispatch_codex/*",
  # iter-0040: Claude Code bootstrap pack (skill + slash command), copied
  # into ~/.claude by `consensus-init --install-claude-code`.
  "claude_extensions/skills/consensus/SKILL.md",
  "claude_extensions/commands/consensus-init.md",
  # iter-0041: operating-procedure skill carrying the transferable
  # consensus-mcp workflow rules (workflow #3 vs #4, dispatch order,
  # gemini 429, snapshot/restore, dispatcher hazards).
  "claude_extensions/skills/consensus-workflow/SKILL.md",
]
