[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consensus-mcp"
version = "1.31.0"
description = "Cross-AI consensus code review: a panel of different AI models you choose (Claude, Codex, Gemini, Kimi, or add your own) review each change independently, and it ships only when they agree. An MCP server for AI coding tools."
authors = [{name = "stgarca"}]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.0",
]

[project.scripts]
consensus-mcp = "consensus_mcp.server:main"
consensus-mcp-dispatch-codex = "consensus_mcp._dispatch_codex:main"
consensus-mcp-dispatch-gemini = "consensus_mcp._dispatch_gemini:main"
consensus-mcp-dispatch-grok = "consensus_mcp._dispatch_grok:main"
consensus-mcp-dispatch-kimi = "consensus_mcp._dispatch_kimi:main"
consensus-init = "consensus_mcp._init_wizard:main"
# v1.19.0: read-only project scorecard rollup over results-v1.jsonl.
consensus-results = "consensus_mcp._results_rollup:main"
# iter-0040 bonus per iter-0039 converged plan Q6: alias so `consensus init`
# (with a SPACE) also works at the shell, matching the natural mental model.
consensus = "consensus_mcp._init_wizard:main"

[tool.setuptools]
packages = [
  "consensus_mcp",
  "consensus_mcp.contributors",
  "consensus_mcp.tools",
  "consensus_mcp.validators",
]
include-package-data = true

[tool.setuptools.package-data]
consensus_mcp = [
  "dispatch_templates/*.md",
  "dispatch_templates/*.json",
  # v1.18.0: packaged built-in contributor profiles + vendored instruction
  # guidelines. Without these, pip users get no built-ins (mirrors how
  # dispatch_templates is packaged).
  "contributor_profiles/*.yaml",
  "contributor_instructions/*.md",
  "docs/*.md",
  "spec_template.md",
  # v1.15.1: converged-plan convention machine-enforcement contract.
  "schemas/*.json",
  "tests/fixtures/dispatch_codex/*",
  # iter-0040: Claude Code bootstrap pack (skill + slash command), copied
  # into ~/.claude by `consensus-init --install-claude-code`.
  "claude_extensions/commands/consensus-init.md",
  # iter-0041 / v1.21: ALL claude_extensions skills (consensus, consensus-workflow,
  # + the 10 vendored superpowers-derived consensus-* skills), the MIT attribution,
  # the provenance ledger, and the enforcement hook scripts. The wildcards prevent
  # the packaging gap where new vendored skills/hooks shipped in source but were
  # absent from the wheel — so `--install-claude-code` silently skipped skills and
  # activated settings.json hooks pointing at non-existent scripts. Enforced by
  # tests/test_package_data_completeness.py.
  # *.md (not just SKILL.md) so vendored COMPANION files (prompt templates,
  # testing-anti-patterns) ship too — the 3-family review (2026-05-23) found the
  # SKILL.md-only glob left companion references dangling in the wheel.
  "claude_extensions/skills/*/*.md",
  "claude_extensions/NOTICE",
  "claude_extensions/VENDORED.md",
  "claude_extensions/hooks/*.py",
  # v1.21 (AGENTS-INIT): per-project Claude Code subagent definitions, copied
  # into a project's .claude/agents/ by `consensus init`. Without this glob a
  # wheel install ships them missing and the per-project bootstrap silently
  # skips the subagents.
  "claude_extensions/agents/*.md",
]
