[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consensus-mcp"
# version is derived from consensus_mcp.__version__ (single source of truth) -
# see [project].dynamic + [tool.setuptools.dynamic] below.
dynamic = ["version"]
description = "Two ways to put multiple AIs on your code. Consult: a panel of different models you choose (Claude, Codex, Gemini, Kimi, or add your own) reviews each change independently and it ships only when they agree. Build: a top-tier model plans and oversees while a cheaper one writes the code in a contained git worktree - capable-model guidance at a fraction of the cost. An MCP server for AI coding tools."
authors = [{name = "stgarca"}]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.0",
]

# v2.2.1 audit QW6: the test toolchain, installable as `pip install -e ".[dev]"`.
# Previously pytest + pytest-timeout existed only as an unpinned line inside
# .github/workflows/test.yml, so a fresh clone (or a rebuilt pipx/dev venv)
# could not run the ~41k-LOC suite from project metadata alone. Bounded pins so
# an upstream major release cannot silently change CI behavior.
[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "pytest-timeout>=2.3,<3",
]

[project.scripts]
consensus-mcp = "consensus_mcp.server:main"
consensus-mcp-dispatch-codex = "consensus_mcp._dispatch_codex:main"
consensus-mcp-dispatch-gemini = "consensus_mcp._dispatch_gemini:main"
consensus-mcp-dispatch-grok = "consensus_mcp._dispatch_grok:main"
consensus-mcp-dispatch-kimi = "consensus_mcp._dispatch_kimi:main"
# v1.32.0: Path A close-and-seal CLI (consult iteration-debrief-2026-05-26).
consensus-mcp-seal-iteration = "consensus_mcp._seal_iteration:main"
# v1.40.0: composed consult-approval (validate + seal + mint in one step).
consensus-mcp-approve = "consensus_mcp._approve_consult:main"
# delivery-token CLI (P0.3): mint a token for a vetted modified file.
consensus-mcp-deliver = "consensus_mcp._deliver:main"
# cold-start scaffold (P2.1): one-call "start a consult" entrypoint.
consensus-mcp-start-consult = "consensus_mcp._start_consult:main"
consensus-init = "consensus_mcp._init_wizard:main"
# v1.19.0: read-only project scorecard rollup over results-v1.jsonl.
consensus-results = "consensus_mcp._results_rollup:main"
# run a full iteration end-to-end (consult iteration-approve-two-...-f641f060,
# Component 2): supported surface for non-Claude hosts (replaces hand-rolled shims).
consensus-mcp-run-iteration = "consensus_mcp._run_iteration_cli:main"
# architect-build (workflow D) supervisor CLI: step / approve-spec / cleanup.
consensus-mcp-architect = "consensus_mcp.tools.architect_loop_step:main"
# v2.2.1 audit QW8: the harness-propose CLI documented in the v2.2.1 CHANGELOG
# and Build guide - the script entry was omitted at release time, so pipx/pip
# installs never created the command the release notes advertised.
consensus-mcp-harness-propose = "consensus_mcp.tools.harness_propose:main"
# iter-0040 bonus per iter-0039 converged plan Q6: alias so `consensus init`
# (with a SPACE) also works at the shell, matching the natural mental model.
consensus = "consensus_mcp._init_wizard:main"

[tool.setuptools.dynamic]
version = {attr = "consensus_mcp.__version__"}

[tool.setuptools]
packages = [
  "consensus_mcp",
  "consensus_mcp.contributors",
  "consensus_mcp.looper_plan",
  "consensus_mcp.tools",
  "consensus_mcp.validators",
]
include-package-data = true

[tool.setuptools.package-data]
consensus_mcp = [
  "dispatch_templates/*.md",
  "dispatch_templates/*.json",
  # v1.18.0: packaged built-in contributor profiles + vendored instruction
  # guidelines. Without these, pip users get no built-ins (mirrors how
  # dispatch_templates is packaged).
  "contributor_profiles/*.yaml",
  "contributor_instructions/*.md",
  "docs/*.md",
  # v1.32.0: packaged first-consult quickstart (consult iteration-debrief-2026-05-26).
  "docs/operations/*.md",
  "spec_template.md",
  # v2.2.1 audit QW4: the Workflow C goal-packet canonical example, cited twice
  # by the PACKAGED spec_template.md - previously the single data file under
  # consensus_mcp/ not covered by any glob (a dangling reference in every wheel).
  "goal_packet_schema.yaml",
  # v1.15.1: converged-plan convention machine-enforcement contract.
  "schemas/*.json",
  "tests/fixtures/dispatch_codex/*",
  # iter-0040: Claude Code bootstrap pack (skill + slash command), copied
  # into ~/.claude by `consensus-init --install-claude-code`.
  "claude_extensions/commands/consensus-init.md",
  # iter-0041 / v1.21: ALL claude_extensions skills (consensus, consensus-workflow,
  # + the 10 vendored superpowers-derived consensus-* skills), the MIT attribution,
  # the provenance ledger, and the enforcement hook scripts. The wildcards prevent
  # the packaging gap where new vendored skills/hooks shipped in source but were
  # absent from the wheel - so `--install-claude-code` silently skipped skills and
  # activated settings.json hooks pointing at non-existent scripts. Enforced by
  # tests/test_package_data_completeness.py.
  # *.md (not just SKILL.md) so vendored COMPANION files (prompt templates,
  # testing-anti-patterns) ship too - the 3-family review (2026-05-23) found the
  # SKILL.md-only glob left companion references dangling in the wheel.
  "claude_extensions/skills/*/*.md",
  "claude_extensions/NOTICE",
  "claude_extensions/VENDORED.md",
  "claude_extensions/hooks/*.py",
  # v1.21 (AGENTS-INIT): per-project Claude Code subagent definitions, copied
  # into a project's .claude/agents/ by `consensus init`. Without this glob a
  # wheel install ships them missing and the per-project bootstrap silently
  # skips the subagents.
  "claude_extensions/agents/*.md",
  # v2.x looper-plan (consult iteration-looper-plan-design-2026-06-23): the
  # vendored Looper design-coach slice. The .py modules ship via the
  # consensus_mcp.looper_plan package entry above; these globs ship the verbatim
  # rubrics/schemas + MIT attribution. The consensus-looper-plan wizard skill is
  # already covered by the claude_extensions/skills/*/*.md glob.
  "looper_plan/rubrics/*.md",
  "looper_plan/schemas/*.json",
  "looper_plan/VENDORED.md",
  "looper_plan/NOTICE",
]
